--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TB</title>
+    <title>TacoBell Dollar Cravings</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -24,7 +24,7 @@
                 <a href="https://www.facebook.com/tacobell/" target="_blank"><i class="icon fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/tacobell?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" target="_blank"><i class="icon fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/tacobell/?hl=en" target="_blank"><i class="icon fab fa-instagram"></i></a>
-                <a href="https://www.youtube.com/user/tacobell"><i class="icon fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/user/tacobell" target="_blank"><i class="icon fab fa-youtube"></i></a>
             </div>
         </section>
     </div>
